# StockAnalysis

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  stock
backend/: README.md  pyproject.toml
backend/examples/: stock_config.json
backend/src/stock_agent/: __init__.py  api.py  cli.py
backend/src/stock_agent/agent/: __init__.py  agent_loop.py  guardrails.py  harness.py  harness_result.py  multi_agent.py  prompt_orchestrator.py  state.py
backend/src/stock_agent/core/: __init__.py  codex_config.py  config.py  conversation_store.py  settings.py
backend/src/stock_agent/interfaces/: __init__.py  cli.py  doctor.py  terminal.py
backend/src/stock_agent/market/: __init__.py  a_share_refresh.py  a_share_tech.py  daily_picks.py  market_refresh.py  market_scope.py  stock_universe.py
backend/src/stock_agent/rag/: __init__.py  embedding.py  knowledge_base.py  knowledge_types.py  rag_eval.py  rag_index.py  vector_store.py
backend/src/stock_agent/services/: __init__.py  api.py  embedding_service.py  web_search.py
backend/tests/: test_a_share_tech.py  test_agent_loop.py  test_api.py  test_codex_config.py  test_conversation_store.py  test_daily_picks.py  test_doctor.py  test_embedding_service.py  test_guardrails.py  test_knowledge_base.py  test_market_refresh.py  test_multi_agent.py  test_prompt_orchestrator.py  test_rag_eval.py  test_rag_index.py  test_settings.py  test_stock_universe.py  test_terminal.py  test_web_search.py
backend/tests/fixtures/: rag_eval_cases.json
holdings/: current_positions.example.csv
scripts/: stock
(+3732 files in other folders)
