[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agent"
version = "0.1.0"
description = "A LangChain-powered stock analysis agent with RAG and an explicit research loop."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.8",
    "numpy>=1.26",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tomli>=2.0; python_version<'3.11'",
    "typer>=0.12",
    "rich>=13.7",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.10",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
stock-agent = "stock_agent.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
